--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8888
 
 #elastic engine
 elasticsearch.host=${ELASTIC_SEARCH_HOST:localhost}
@@ -11,6 +11,6 @@ maxhit = ${MAX_HIT_RETURNED:3}
 #redis
 redis.host=${REDIS_HOST:127.0.0.1}
 redis.port=${REDIS_PORT:6379}
-redis.password=${REDIS_PASSWORD:5HsvRYmVDn}
+redis.password=${REDIS_PASSWORD:redisdb}
 #timeout in seconds
 redis.timeout=${REDIS_CACHE_TIMEOUT:120}
