update elastic host

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8888
 
 #elastic engine
-elasticsearch.host=${ELASTIC_SEARCH_HOST:localhost}
+elasticsearch.host=${ELASTIC_SEARCH_HOST:35.238.81.119}
 elasticsearch.port=${ELASTIC_SEARCH_TRANSPORT_PORT:9300}
 
 questionIndex = ${ELASTIC_QUESTION_INDEX:questions}
