--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+app.version=${APP_VERSION:local}
+server.port=${SERVER_PORT:8080}
+
 #elastic engine
 elasticsearch.host=${ELASTIC_SEARCH_HOST:35.238.81.119}
 elasticsearch.port=${ELASTIC_SEARCH_TRANSPORT_PORT:9300}
@@ -12,3 +15,7 @@ redis.port=${REDIS_PORT:6379}
 redis.password=${REDIS_PASSWORD:redisdb}
 #timeout in seconds
 redis.timeout=${REDIS_CACHE_TIMEOUT:120}
+
+# Zipkin
+spring.application.name=question-ms
+spring.zipkin.base-url=${ZIPKIN_SERVER_BASE_URL:http://104.154.51.131:9411/}
