--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
