--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ redis.password=${REDIS_PASSWORD:redisdb}
 redis.timeout=${REDIS_CACHE_TIMEOUT:120}
 
 # Zipkin
-spring.application.name=question-ms
+spring.application.name=elastic-search-ms
 spring.zipkin.base-url=${ZIPKIN_SERVER_BASE_URL:http://104.154.51.131:9411/}
